<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:id="@+id/studentProfileLayout"
            android:background="@drawable/box_shadowed_bottom"
            android:paddingBottom="4dp">

            <ImageView
                android:layout_width="match_parent"
                android:src="@drawable/child2"
                android:id="@+id/studentPicture"
                android:scaleType="centerCrop"
                android:layout_height="match_parent" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_height="60dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/white"
                    android:alpha="0.9">

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/register_user_name"
                        android:textColor="@color/textColor"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:textSize="18sp"
                        android:alpha="0.9" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/user_role"
                        android:textColor="@color/textColorSecondary"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:textSize="14sp"
                        android:alpha="0.9" />

                </LinearLayout>
            </RelativeLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical|center_horizontal"
            android:layout_margin="20dp"
            android:background="@color/verylightGray">

            <TextView
                android:text="@string/title_data_biometric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:layout_marginBottom="20dp"
                android:textSize="18sp"
                android:textColor="@color/textColor"
                android:textStyle="normal|bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="HUELLA DIGITAL DEL PULGAR DERECHO"
                    android:gravity="center_horizontal"
                    android:textSize="10sp"
                    android:textColor="@color/textColorSecondary"
                    android:alpha="0.75" />

                <RelativeLayout android:layout_width="178dp"
                    android:layout_height="178dp"
                    android:layout_marginTop="13dp">

                    <RelativeLayout
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:foreground="@drawable/box_container"
                        android:background="@color/lightGray"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true">

                        <TextView
                            android:text="Esperando lectura de huella"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView4"
                            android:layout_centerInParent="true"
                            android:layout_centerHorizontal="true"
                            android:textStyle="normal|italic"
                            android:textSize="14sp"
                            android:textColor="@color/textColorSecondary"
                            android:gravity="center_horizontal"
                            android:layout_width="120dp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true">

                            <ImageView
                                app:srcCompat="@drawable/circle_white"
                                android:id="@+id/loading1"
                                android:layout_marginBottom="10dp"
                                android:layout_marginLeft="4dp"
                                android:layout_marginRight="4dp"
                                android:layout_width="6dp"
                                android:layout_height="6dp" />

                            <ImageView
                                app:srcCompat="@drawable/circle_white"
                                android:id="@+id/loading2"
                                android:layout_marginBottom="10dp"
                                android:layout_marginLeft="4dp"
                                android:layout_marginRight="4dp"
                                android:layout_width="6dp"
                                android:layout_height="6dp"
                                android:tint="@color/dividerColor" />

                            <ImageView
                                app:srcCompat="@drawable/circle_white"
                                android:id="@+id/loading3"
                                android:layout_marginBottom="10dp"
                                android:layout_marginLeft="4dp"
                                android:layout_marginRight="4dp"
                                android:layout_width="6dp"
                                android:layout_height="6dp"
                                android:tint="@color/dividerColor" />
                        </LinearLayout>

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/fingerprint_real"
                            android:background="@android:color/white"
                            android:id="@+id/studentFingerPrintImg"
                            android:visibility="visible" />

                    </RelativeLayout>

                    <FrameLayout
                        android:background="@drawable/circle_big_mask"
                        android:layout_alignParentRight="true"
                        android:elevation="0dp"
                        android:id="@+id/checked"
                        android:layout_alignParentBottom="true"
                        android:layout_marginRight="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:visibility="visible">
                        <ImageView
                            android:src="@drawable/tick_icon_sm"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:layout_width="24dp"
                            android:layout_height="24dp" />
                    </FrameLayout>
                </RelativeLayout>


                -->

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>